--- a/Keepit-Web/pom.xml
+++ b/Keepit-Web/pom.xml
@@ -21,6 +21,12 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>br.ufrn.imd.web2</groupId>
+            <artifactId>Keepit-Bean</artifactId>
+            <version>1.0</version>
+            <type>ejb</type>
+        </dependency>
     </dependencies>
 
     <build>
