--- a/Keepit-Web/src/main/webapp/WEB-INF/web.xml
+++ b/Keepit-Web/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,12 @@
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
+    <filter>
+        <filter-name>FiltroLogin</filter-name>
+        <filter-class>br.ufrn.imd.web2.keepit.view.filter.FiltroLogin</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>FiltroLogin</filter-name>
+        <url-pattern>/restrito/*</url-pattern>
+    </filter-mapping>
 </web-app>
