--- a/Keepit-Web/pom.xml
+++ b/Keepit-Web/pom.xml
@@ -27,8 +27,12 @@
             <version>1.0</version>
             <type>ejb</type>
         </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.0</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
